[workspace]
members = [
    "./crates/*",
    "crates/ast",
    "crates/cst",
    "crates/lexer",
    "crates/parser",
    "crates/wasm-app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
lexer = { path = "./crates/lexer", version = "0.0.0" }
parser = { path = "./crates/parser", version = "0.0.0" }
cst = { path = "./crates/cst", version = "0.0.0" }
ast = { path = "./crates/ast", version = "0.0.0" }
compiler = { path = "./crates/compiler", version = "0.0.0" }
expect-test = "1.5.1"
pretty = "0.12.4"
im = "15.1.0"
ena = "0.14.3"
anyhow = "1.0.97"
text-size = "1.1.1"
line-index = "0.1.2"
rowan = "0.16.1"

[profile.release]
opt-level = "s"
debug = false
lto = true
strip = true
codegen-units = 1
