[package]
name = "compiler"
version = "0.0.0"
edition.workspace = true

[dependencies]
parser.workspace = true
ast.workspace = true
expect-test.workspace = true
pretty.workspace = true
lalrpop-util.workspace = true
im.workspace = true
ena.workspace = true
anyhow.workspace = true

[build-dependencies]
lalrpop = "0.22.1"
